# CloudOblig

./: app.py  csvhandling.py  main.py  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tempCodeRunnerFile.py  views.py
assets/: template.md
src/lab8/: __main__.py  file2.py
static/: index.html  styles.css
templates/: index.html
tests/: heyhey_main.py  test_file2.py  test_main.py  test_simple_example.py
uploaded_files/: e1d75388-a363-45cf-944d-3912452b134b.csv
