[metadata]
name = lab8
description = IDG2001 2024 - Lab 8
author = Paul Knutson
platforms = linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    # Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = 
    lab8
install_requires = 
    requests>=2
python_requires = >=3.7
package_dir = 
    =src
zip_safe = no


[options.extras_require]
testing = 
    pytest>=7.2
    pytest-cov>=4.0
    mypy>=0.991
    flake8>=6.0
    tox>=4.0


[options.package_data]
exercise7 = py.typed


[flake8]
max-line-length = 80
ignore = W191, E203, E223, E226


[pycodestyle]
count = False
ignore = E226,E41,W191
max-line-length = 80
statistics = True
